--- a/src/lunaInstallerApp/package.json
+++ b/src/lunaInstallerApp/package.json
@@ -14,6 +14,6 @@
   },
   "dependencies": {
     "jquery": "^3.2.1",
-    "luna-logo-loader": "git+ssh://git@github.com:luna/luna-logo-loader.git#v1.0.5"
+    "luna-logo-loader": "git+ssh://https://github.com/luna/luna-logo-loader.git#v1.0.5"
   }
 }
